--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tabkha-ai-kitchen-genie</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>Wasfah AI Kitchen Pal</title>
+    <meta name="description" content="Your AI-powered kitchen assistant" />
     <meta name="author" content="Lovable" />
+    <meta name="theme-color" content="#44a694" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <link rel="apple-touch-icon" href="/icon-192x192.png" />
 
-    <meta property="og:title" content="tabkha-ai-kitchen-genie" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Wasfah AI Kitchen Pal" />
+    <meta property="og:description" content="Your AI-powered kitchen assistant" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
